--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
-CLIENT_ID=451365300876-judqtr07mnqo9ak4vii37nmu416vergj.apps.googleusercontent.com
-CLIENT_SECRET=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
+CLIENT_ID=451365300876-mjupuah1t03jv5dofs9acil25hf77hp6.apps.googleusercontent.com
+CLIENT_SECRET=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
+MONGO_URL=mongodb+srv://ahmed:donola4real@5starmums.trhmf5z.mongodb.net/5StarMums?retryWrites=true&w=majority
