--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.1",
     "path": "^0.12.7"
   }
 }
